--- a/wp-content/themes/mybizniche/resources/css/scss/contact.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/contact.scss
@@ -3,7 +3,7 @@
 
 section.banner {
     h1 {
-        padding: 106px 0 149px
+        padding: 166px 0 140px
     }
 }
 
@@ -152,5 +152,26 @@ section.map_section {
         }
     } 
 
+
+    @include media(max-width, 1365px){
+        .overlay-container {
+            .box-cont{
+                p{
+                    font-size:16px;
+                }
+            }
+        }
+    }
+    @include media(max-width, 1279px){
+        .overlay-container {
+            .box-cont{
+                span.last-name,
+                span.first-name {
+                    width: 100%;
+                }
+            }
+        }
+
+    }
 
 }
