--- a/wp-content/themes/mybizniche/resources/css/scss/contact.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/contact.scss
@@ -13,14 +13,14 @@ section {
         position: relative;
         width: 100%;
         height: 720px;
-        z-index:99;
+        z-index:10;
         .overlay-container {
             position: absolute;
             width: 100%;
             height: 100%;
             top: 0px;
             left: 0px;
-            z-index: 9;
+            z-index: 2;
 
             .box-cont {
                 display: block;
@@ -194,10 +194,6 @@ section {
 
 @include media(max-width, 1279px) {
     
-    
-
-    
-
     .overlay-container {
         .box-cont {
 
@@ -235,7 +231,7 @@ section {
         &.map_section {
             height: auto;
             overflow-y: visible;
-
+            margin-top:0px;
             #map {
                 width: 100%;
                 height: 720px;
