--- a/wp-content/themes/mybizniche/resources/css/scss/find-store.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/find-store.scss
@@ -18,7 +18,14 @@ section {
         position: relative;
         width: 100%;
         height: 720px;
-
+        .grid-container{
+            @include media(max-width, 1600px) {
+               max-width:calc(100% - 100px)!important;
+            }
+            @include media(max-width, 639px) {
+                max-width: 640px!important;
+             }
+        }
         #map {
             width: 100%;
             min-height: 720px;
@@ -161,6 +168,14 @@ section {
         padding-bottom: 20px;
         margin-top: 51px;
         position: relative;
+        .grid-container{
+            @include media(max-width, 1600px) {
+                max-width:calc(100% - 100px)!important;
+             }
+             @include media(max-width, 639px) {
+                max-width: 640px!important;
+             }
+        }
         .slick-dots{
             display:block;
             margin:75px auto 0;
@@ -264,8 +279,8 @@ section {
                 transform: rotate(-180deg);
                 -webkit-transform: rotate(-180deg);
             }
-            @include media(max-width, 1023px) {
-                top:-20px;
+            @include media(max-width, 639px) {
+                display:none!important;
             }
         }
 
