Created Service Page

--- a/wp-content/themes/mybizniche/resources/css/scss/base/_components.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/base/_components.scss
@@ -2,6 +2,10 @@
     color: $color-secondary;
 }
 
+.white{
+    color: #fff;
+}
+
 .arrow-button,
 .write-button{
     font-family: "Roboto", sans-serif;
