--- a/wp-content/themes/mybizniche/resources/css/scss/app.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/app.scss
@@ -1056,8 +1056,43 @@
         padding-right: 0;
     }
 
+    .faq-boxes{
+        display: flex;
+        flex-wrap: wrap;
+
+        .slick-dots{
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: block;
+            text-align: center;
+            position: absolute;
+            bottom: 10px;
+            left: 0;
+            width: 100%;
+
+            li{
+                display: inline-block;
+                margin: 0 5px;
+                
+                button{
+                    text-indent: 999px;
+                    overflow: hidden;
+                    width: 11px;
+                    height: 11px;
+                    border: 1px solid #fff;
+                    border-radius: 50%;
+
+                }
+            }
+        }
+    }
+
     .faq-box{
         padding:  110px 25px;
+        max-width: 100%;
+        flex: 0 0 100%;
+        background-color: #fff;
 
         .text{
             h3{
@@ -1089,6 +1124,8 @@
 
         &.faq-box-2{
             background-color: #414141;
+            max-width: 58%;
+            flex: 0 0 58%;
             
             .text{
                 max-width: 720px;
@@ -1105,6 +1142,9 @@
         }
 
         &.faq-box-3{
+            max-width: 42%;
+            flex: 0 0 42%;
+
             .text{
                 max-width: 480px;
                 margin: 0 0 0 11%;
@@ -1138,6 +1178,9 @@
 
     @include media(max-width, 1536px){
         .faq-box{
+            padding-top: 90px;
+            padding-bottom: 90px;
+            
             .text{
                 h3{
                     font-size: 45px;
@@ -1148,16 +1191,456 @@
                 }
             }
         }
+
+        .faq-cta{
+            a{
+                padding: 45px 25px;
+            }
+        }
     }
 
     @include media(max-width, 1023px){
+        .faq-boxes{
+            display: block;
+        }
+
         .faq-box{
             padding: 50px 25px;
+            max-width: 100% !important;
+            height: auto !important;
 
             .text{
                 max-width: 100% !important;
                 margin: 0 !important;
+
+                h3{
+                    font-size: 32px;
+                }
+                
+                p{
+                    font-size: 18px;
+                }
+            }
+        }
+
+        .faq-cta{
+            a{
+                padding: 25px 25px;
             }
         }
     }
 }
+
+
+.sec-masthead{
+    padding-top: 145px;
+    padding-bottom: 80px;
+
+    .text-wrap{
+        max-width: 1170px;
+        margin: 0 auto;
+
+        h1{
+            font-size: 90px;
+            font-weight: 500;
+            color: $color-primary;
+            margin-bottom: 10px;
+        }
+
+        p{
+            font-size: 24px;
+            font-weight: 300;
+            line-height: 1.88;
+        }
+    }
+
+    @include media(max-width, 1536px){
+        .text-wrap{
+            max-width: 1015px;
+
+            h1{
+                font-size: 70px;
+            }
+
+            p{
+                font-size: 21px;
+            }
+        }
+    }
+
+    @include media(max-width, 1023px){
+        .text-wrap{
+            h1{
+                font-size: 45px;
+            }
+
+            p{
+                font-size: 18px;
+            }
+        }
+    }
+}
+
+
+
+.sec-years{
+    padding-top: 323px;
+    position: relative;
+    z-index: 1;
+    background-color: $color-primary;
+    overflow: hidden;
+
+    .bg-slider{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: -1;
+
+        &:before{
+            content: '';
+            display: block;
+            width: 100%;
+            height: 65%;
+            background: #ffffff;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+        }
+
+        &:after{
+            content: '';
+            display: block;
+            width: 100%;
+            height: 400px;
+            background: transparent url(../img/img-toka-fade.png) no-repeat center bottom;
+            background-size: 100%;
+            position: absolute;
+            z-index: 1;
+            bottom: 3%;
+            left: 0;
+        }
+
+        .slide-item{
+            outline: none;
+        }
+    }
+
+    .text-wrap{
+        &.text-wrap-1{
+            margin-bottom: 70%;
+
+            h2{
+                font-size: 64px;
+                font-weight: 500;
+                margin-bottom: 0;
+                color: $color-primary;
+            }
+    
+            h4{
+                font-size: 23px;
+                font-weight: 500;
+                margin-bottom: 20px;
+                color: $color-primary;
+            }
+
+            p{
+                color: #222;
+            }
+        }
+
+        &.text-wrap-2{
+            max-width: 1290px;
+
+            p{
+                font-size: 40px;
+                font-weight: 300;
+                line-height: 1.63;
+                color: #b2b2ae;
+            }
+
+            b{
+                font-weight: normal;
+                color: #fff;
+            }
+        }
+    }
+
+    .ivmenu-options{
+        margin-top: 75px;
+
+        .title{
+            font-size: 64px;
+            font-weight: 300;
+            color: #ffffff;
+            margin-bottom: 80px;
+        }
+
+        .ivmenu-item{
+            margin-bottom: 150px;
+
+            .heading{
+                display: flex;
+                align-items: flex-end;
+                line-height: 1;
+                position: relative;
+                z-index: 1;
+                margin-bottom: 10px;
+
+                &:after{
+                    content: '';
+                    display: block;
+                    width: 1200px;
+                    height: 0;
+                    border-bottom: 3px solid #dfdfdf;
+                    position: absolute;
+                    bottom: 2px;
+                    z-index: -1;
+                }
+
+                .icon{
+                    margin-left: -75px;
+                    padding-right: 25px;
+
+                    svg{
+                        width: 100%;
+                        height: auto;
+                    }
+                }
+
+                .text{
+                    font-size: 40px;
+                    font-weight: bold;
+                    color: #c03015;
+                    text-transform: uppercase;
+                    background: $color-primary;
+                    display: inline-block;
+                    margin-bottom: -5px;
+                    padding: 0 10px;
+
+                    img{
+                        width: 90px;
+                    }
+                }
+            }
+
+            .metas{
+                list-style-type: none;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                margin: 0 0 50px 0;
+
+                li{
+                    font-size: 20px;
+                    font-weight: bold;
+                    color: #b2b2ae;
+                    text-transform: uppercase;
+                }
+
+                .price-tag{
+                    font-family: 'Oswald', sans-serif;
+                    font-size: 18px;
+                    font-weight: normal;
+                    color: #ffffff;
+
+                    u{
+                        text-decoration: line-through;
+                        display: inline-block;
+                        margin-right: 5px;
+                        color: #555555;
+                    }
+
+                    .badge{
+                        width: 69px;
+                        height: 35px;
+                        line-height: 35px;
+                        border-radius: 18px;
+                        background-color: #ffffff;
+                        font-family: "Roboto", sans-serif;
+                        font-size: 14px;
+                        color: #222222;
+                        padding: 0;
+                        display:inline-block;
+                        margin-left: 10px;
+                        vertical-align: bottom;
+                    }
+                }
+            }
+
+            .content{
+                p{
+                    font-size: 20px;
+                    font-weight: 300;
+                    line-height: 2.25;
+                    color: #b2b2ae;
+                }
+            }
+
+            &.left-side{
+                .heading{
+                    &:after{
+                        right: 0;
+                    }
+                }
+            }
+
+            &.right-side{
+                .heading{
+                    &:after{
+                        left: -80px;
+                    }
+                }
+            }
+        }
+    }
+
+
+    @include media(max-width, 1640px){
+        .ivmenu-options{
+            .grid-x{
+                .cell:first-child{
+                    margin-left: 90px;
+                }
+            }
+        }
+    }
+
+    @include media(max-width, 1536px){
+        .text-wrap{
+            &.text-wrap-1{
+                h2{
+                    font-size: 55px;
+                }
+
+                h4{
+                    font-size: 20px;
+                }
+            }
+
+            &.text-wrap-2{
+                max-width: 1115px;
+
+                p{
+                    font-size: 35px;
+                }
+            }
+        }
+
+        .ivmenu-options{
+            .title{
+                font-size: 44px;
+            }
+
+        }
+    }
+
+    @include media(max-width, 1023px){
+        .text-wrap{
+            &.text-wrap-1{
+                margin-bottom: 55px;
+
+                h2, h4, p{
+                    color: #fff;
+                }
+
+                h2{
+                    font-size: 55px;
+                }
+
+                h4{
+                    font-size: 20px;
+                }
+            }
+
+            &.text-wrap-2{
+                p{
+                    font-size: 27px;
+                }
+            }
+        }
+
+        .ivmenu-options{
+            .title{
+                font-size: 32px;
+            }
+
+            .grid-x{
+                .cell:first-child{
+                    margin-left: 0.9375rem;
+                }
+            }
+
+            .ivmenu-item{
+                margin-bottom: 30px;
+
+                .heading{
+                    &:after{
+                        left: 0 !important;
+                        right: auto !important;
+                        width: 100%;
+                    }
+
+                    .icon{
+                        margin-left: 0;
+                        padding-right: 15px;
+                        width: 42px;
+                    }
+                    
+                    .text{
+                        font-size: 28px;
+                    }
+                }
+            }
+        }
+    }
+
+    @include media(max-width, 639px){
+
+        .ivmenu-options{
+            .title{
+                font-size: 24px;
+            }
+
+            .grid-x{
+                .cell:first-child{
+                    margin-left: 0.9375rem;
+                }
+            }
+
+            .ivmenu-item{
+                margin-bottom: 30px;
+                
+                .heading{
+                    .icon{
+                        width: 30px;
+                        padding-right: 5px;
+                    }
+                    
+                    .text{
+                        font-size: 20px;
+
+                        img{
+                            width: 60px;
+                        }
+                    }
+                }
+
+                .metas{
+                    li{
+                        font-size: 18px;
+                    }
+                }
+
+                .content{
+                    p{
+                        font-size: 18px;
+                        line-height: 1.5;
+                    }
+                }
+            }
+        }
+    }
+}
+
