--- a/wp-content/themes/mybizniche/resources/css/scss/sections/_header.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/sections/_header.scss
@@ -190,6 +190,10 @@
         position: static !important;
         background-color: transparent !important;
 
+        .mega-menu-toggle{
+            display: none !important;
+        }
+
         .mega-menu{
             position: static !important;
             display: flex !important;
@@ -204,6 +208,7 @@
                 text-transform: uppercase !important;
                 background-color: transparent !important;
                 font-size: 16px !important;
+                outline: none !important;
             }
 
             .mega-sub-menu{
@@ -395,6 +400,16 @@
         }
     }
 
+    @include media(max-width, 1200px){
+        .mega-menu-wrap{
+            .mega-menu{
+                & > li{
+                    margin-right: 20px !important;
+                }
+            }
+        }
+    }
+
     @include media(max-width, 1072px){
         .m-menu{
             li{
@@ -428,22 +443,40 @@
             }
         }
 
-        .m-menu{
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background: $color-primary;
-            z-index: 20;
-            text-align: center;
-            padding: 15px 10px;
+        .mega-menu-wrap{
+            position: fixed !important;
+            bottom: 0 !important;
+            left: 0 !important;
+            width: 100% !important;
+            background: $color-primary !important;
+            z-index: 20 !important;
+            text-align: center !important;
+            padding: 0 10px !important;
 
-            li{
-                margin-right: 20px;
+            .mega-menu{
+                & > li{
+                    flex: 1;
+                    margin: 0 !important;
 
-                a{
-                    color: #fff;
+                    & > .mega-menu-link{
+                        padding: 25px 15px !important;
+                        text-align: center !important;
+                        font-size: 13px !important;
+                        color: #fff !important;
+                    }
+
+                    &.mega-toggle-on{
+                        & > .mega-menu-link{
+                            &:before{
+                                display: none !important;
+                            }
+                        }
+                    }
                 }
+            }
+
+            .mega-sub-menu{
+                display: none !important;
             }
         }
     }
