--- a/wp-content/themes/mybizniche/style.css
+++ b/wp-content/themes/mybizniche/style.css
@@ -129,7 +129,7 @@ body {overflow-x: hidden;}
 
 #woocommerce ul.products {padding: 30px 0 0;}
 #woocommerce ul.products li {text-align: center;}
-#woocommerce ul.products li h2 {font: ;}
+#woocommerce ul.products li h2 {}
 #woocommerce ul.products li .onsale {background: #222; margin: 0; min-height: 1px; min-width: 1px; padding: 10px; border-radius: 20px; font:400 14px/1 "Roboto", sans-serif}
 #woocommerce ul.products li .price {font:400 18px "Oswald", sans-serif; color: #222222;}
 #woocommerce ul.products li .price del {color: #bebebe; text-decoration: none; opacity: 1;}
@@ -142,44 +142,91 @@ body {overflow-x: hidden;}
 #woocommerce ul.products li .yith-wcqv-button {border:1px solid #333;}
 #woocommerce ul.products li .wc-forward {display: none;}
 
-#woocommerce-single-product {position: relative;}
+#woocommerce .single_add_to_cart_button {letter-spacing:normal; text-transform: uppercase; border:1px solid #333; background: #222 url(resources/img/icn-shop-bag.svg) no-repeat 18px center; color: #fff; padding: 20px 25px 20px 55px; font-weight: bold;}
 
+/*  Product detail */
+#woocommerce-single-product {position: relative;}
+#woocommerce .product_title {font-size: 40px; color: #1c8ece; letter-spacing: normal; text-transform: uppercase;}
+
+#woocommerce-single-product .onsale {background: #222; margin: 0; min-height: 1px; min-width: 1px; padding: 10px; border-radius: 20px; font:400 14px/1 "Roboto", sans-serif}
 #woocommerce-single-product .woocommerce-image-summary {padding: 40px 0;}
 
 #woocommerce-single-product .cell .single-image-view .images,
 #woocommerce-single-product .cell .summary {float: none !important; width: auto !important;}
 
+#woocommerce-single-product .woocommerce-product-details__short-description p {font-size: 18px; color: #222;}
+#woocommerce-single-product div.summary .price {letter-spacing:1px; color: #222; font:45px 'Oswald', sans-serif; line-height: 1;}
+#woocommerce-single-product div.summary .price .woocommerce-Price-currencySymbol {color:#b2b2ae; font-size: 26px; vertical-align: top; line-height: 1; padding-top: 4px; display: inline-block;}
+
+#woocommerce-single-product .custom-variations td {display: block; padding: 4px 0; line-height: 1;}
+#woocommerce-single-product .custom-variations .pa_size {font-size: 15px; color:#b2b2ae;}
+#woocommerce-single-product .woocommerce-variation {margin-bottom: 30px;}
+#woocommerce-single-product .woocommerce-variation {margin-bottom: 30px;}
+
 #woocommerce-single-product .single-image-view {position: relative; max-width: 580px; margin: 0 auto;}
 #woocommerce-single-product .summary > *:last-child {margin-bottom: 0;}
 
-#woocommerce-single-product .product_meta {margin-bottom: 20px; font-size: 14px;}
-#woocommerce-single-product .product_meta a {text-decoration: underline;}
+#woocommerce-single-product .product_meta {margin-bottom: 20px; font-size: 14px; color: #b2b2ae;}
+#woocommerce-single-product .product_meta a {color: #14c8f0;}
 #woocommerce-single-product .product_meta .tagged_as {display: none;}
 #woocommerce-single-product .product_meta .sku_wrapper {display: block;}
 
-#woocommerce-single-product div.summary p.price {letter-spacing:1px; color: #f8f8f8; font-family: 'Oswald', sans-serif; font-size: 46px; line-height: 1;}
-#woocommerce-single-product div.summary .price .woocommerce-Price-currencySymbol {color:#bebebe; font-size: 26px; vertical-align: top; line-height: 1; padding-top: 4px; display: inline-block;}
-#woocommerce-single-product .quantity .qty {height: 52px; width: 70px;}
+/* #woocommerce-single-product div.summary p.price {letter-spacing:1px; color: #222; font:45px 'Oswald', sans-serif; line-height: 1;}
+#woocommerce-single-product div.summary .price .woocommerce-Price-currencySymbol {color:#b2b2ae; font-size: 26px; vertical-align: top; line-height: 1; padding-top: 4px; display: inline-block;} */
+#woocommerce-single-product .quantity .qty {height: 58px; width: 70px;}
 
-#woocommerce-single-product .woocommerce-breadcrumb {font-size: 0; margin-bottom: 40px;} 
-#woocommerce-single-product .woocommerce-breadcrumb a {font-size: 14px; color: #f8f8f8;}
-#woocommerce-single-product .woocommerce-breadcrumb a + a:before {content: ">"; margin-left: 5px; margin-right: 5px; color: #aaaaaa;}
+#woocommerce-single-product .woocustom-breadcrumb {font-size: 16px; color: #b2b2ae; float: none;} 
+#woocommerce-single-product .woocustom-breadcrumb a {color: #222222;}
 
 #woocommerce-single-product .woocommerce-tabs {background: #222; color: #b2b2ae; position: relative; padding: 40px 0;}
 #woocommerce-single-product .woocommerce-tabs:before {content: ""; background: #222; position: absolute; top:0; bottom: 0; left: 50%; margin-left: -50vw; width: 100vw; z-index: -1;}
-#woocommerce-single-product .woocommerce-tabs * {font-family: "Roboto", sans-serif; font-size: 18px;}
-#woocommerce-single-product .woocommerce-tabs h2 {font-size: 32px; margin-bottom: 40px; color: #fff;}
-#woocommerce-single-product .woocommerce-tabs h3 {font-size: 28px; color: #1c8ece;}
-#woocommerce-single-product .woocommerce-tabs h4 {font-size: 24px; color: #1c8ece;}
-#woocommerce-single-product .woocommerce-tabs h5 {font-size: 20px; color: #1c8ece;}
+#woocommerce-single-product .woocommerce-tabs * {font:18px/1.5 "Roboto", sans-serif;}
+#woocommerce-single-product .woocommerce-tabs h2 {font-size: 32px; font-weight: bold; margin-bottom: 40px; color: #fff;}
+#woocommerce-single-product .woocommerce-tabs h3 {font-size: 28px; font-weight: bold; color: #1c8ece;}
+#woocommerce-single-product .woocommerce-tabs h4 {font-size: 24px; font-weight: bold; color: #1c8ece;}
+#woocommerce-single-product .woocommerce-tabs h5 {font-size: 20px; font-weight: bold; color: #1c8ece;}
 #woocommerce-single-product .woocommerce-tabs p {margin-bottom: 40px;}
 #woocommerce-single-product .woocommerce-tabs table {width: auto; max-width: 100%;}
 #woocommerce-single-product .woocommerce-tabs table td {color: #f8f8f8; padding: 5px;}
 #woocommerce-single-product .woocommerce-tabs table td:first-child {color: #bebebe;}
-#woocommerce-single-product .woocommerce-tabs .wc-tabs {display: none; border: 0; background: none; padding:0 0 0 8px;}
+#woocommerce-single-product .woocommerce-tabs .wc-tabs {display: none; border: 0; background: none; padding:0 0 0 8px; margin: -87px 0 40px;}
 #woocommerce-single-product .woocommerce-tabs .wc-tabs.show {display: block;}
 
+#woocommerce-single-product .woocommerce-tabs .organic-100 {font-size: 68px; font-weight: bold; color: #1c8ece; margin-top: 80px;}
+#woocommerce-single-product .woocommerce-tabs .organic-100 small {font-size:21px;  font-weight: bold; color: #fff; display:block; line-height: 1.2;}
 
+#woocommerce-single-product .related {padding: 70px 0 20px;}
+#woocommerce-single-product .related h2 {font-size: 32px; font-weight: bold;}
+
+/* Product popup */
+#yith-quick-view-modal.open .yith-wcqv-main {overflow-y: auto;}
+#yith-quick-view-modal .yith-wcqv-wrapper {width: 1410px !important; max-width: 100%; height: 80vh !important;}
+#yith-quick-view-modal .yith-wcqv-main {background: #fff; box-shadow: none; border:1px solid #3c3c3c;}
+#yith-quick-view-modal .onsale {background: #222; margin: 0; min-height: 1px; min-width: 1px; padding: 10px; border-radius: 20px; font:400 14px/1 "Roboto", sans-serif}
+
+#yith-quick-view-content div.images {padding: 70px 0;}
+#yith-quick-view-content div.summary {padding:100px 15px 50px;}
+#yith-quick-view-modal .product_title {font-size: 40px; color: #1c8ece; letter-spacing: normal; text-transform: uppercase;}
+#yith-quick-view-modal .single_add_to_cart_button {letter-spacing:normal; text-transform: uppercase; border:1px solid #333; background: #222 url(resources/img/icn-shop-bag.svg) no-repeat 18px center; color: #fff; padding: 20px 25px 20px 55px; font-weight: bold;}
+#yith-quick-view-modal div.summary p.price {letter-spacing:1px; color: #222; font:45px 'Oswald', sans-serif; line-height: 1;}
+#yith-quick-view-modal div.summary .price .woocommerce-Price-currencySymbol {color:#b2b2ae; font-size: 26px; vertical-align: top; line-height: 1; padding-top: 4px; display: inline-block;}
+#yith-quick-view-modal div.summary .price {letter-spacing:1px; color: #222; font:45px 'Oswald', sans-serif; line-height: 1;}
+#yith-quick-view-modal div.summary .price .woocommerce-Price-currencySymbol {color:#b2b2ae; font-size: 26px; vertical-align: top; line-height: 1; padding-top: 4px; display: inline-block;}
+
+#yith-quick-view-modal .woocommerce-product-details__short-description {max-width: 690px;}
+#yith-quick-view-modal .woocommerce-product-details__short-description p {font-size: 18px; color: #222;}
+
+#yith-quick-view-content .product_meta {display: none;}
+
+#yith-quick-view-modal .custom-variations td {display: block; padding: 4px 0; line-height: 1;}
+#yith-quick-view-modal .custom-variations .pa_size {font-size: 15px; color:#b2b2ae;}
+#yith-quick-view-modal .woocommerce-variation {margin-bottom: 30px;}
+
+#yith-quick-view-close {border:0; font-size: 0;right: 15px; top: 15px;}
+#yith-quick-view-close:before {content: "\2715"; font-size: 20px;}
+
+.button-variable-wrapper .variable-item {color: #b2b2ae !important;}
+.button-variable-wrapper .variable-item.selected {background: #333 !important; color: #fff !important;}
 
 @media (min-width: 1600px) {
 	.wp-block-group__inner-container, .wp-block-cover__inner-container {max-width: 1440px;}
@@ -256,6 +303,8 @@ body {overflow-x: hidden;}
 	.woocommerce-sidebar.show .all-categories {display: block;}
 	  
 	.parent-pageid-65 .page-content p{text-align: center;font-size:18px}
+
+	#woocommerce-single-product .woocommerce-tabs .organic-100 {margin-top: 0;}
 }
 
 @media (max-width: 639px) {
