--- a/wp-content/themes/mybizniche/resources/css/scss/app.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/app.scss
@@ -67,7 +67,10 @@
                 margin-right:15px;
                 line-height:1.8em;
                 font-weight: bold;
-               
+
+                a{
+                    color: inherit;
+                }
             }
 
             li:hover{
@@ -109,6 +112,14 @@
         width: 100%;
         margin-bottom: 80px;
 
+        .tab-item{
+            display: none;
+
+            &.in{
+                display: block;
+            }
+        }
+
         .items{
             display: flex;
             justify-content: space-evenly;
@@ -144,6 +155,7 @@
                         color: $color-dark;
                         margin-bottom: 0;
                         line-height: 1;
+                        text-transform: uppercase;
                     }
 
                     h6{
@@ -678,17 +690,20 @@
                 }
             }
 
-            .product{
+            .product, .product2{
                 position: absolute;
-                bottom: 4%;
-                left: 66%;
+                bottom: -3%;
+                right: 0;
                 z-index: 6;
+                width: 40%;
+
+                img{
+                    max-width: 100%;
+                    height: auto;
+                }
             }
             .product2{
-                position: absolute;
-                bottom: 4%;
-                left: 75%;
-                z-index: 6;
+                margin-right: -10%;
             }
         }
 
@@ -729,7 +744,7 @@
     .find-slider-nav{
         text-align: center;
         position: absolute;
-        bottom: 23%;
+        bottom: 24%;
         left: 0;
         width: 100%;
 
@@ -797,6 +812,12 @@
                     left: 50%;
                     right: auto;
                     transform: translateX(-50%);
+                    margin-left: auto !important;
+                    margin-right: auto !important;
+                    
+                    &.small-text{
+                        font-size: 145px;
+                    }
                 }
             }
         }
@@ -814,7 +835,7 @@
         text-align: center;
         position: absolute;
         left: 0;
-        bottom: 48%;
+        bottom: 50%;
     }
 
     .button-wrap{
@@ -830,6 +851,22 @@
         .find-slider{
             .slick-dots{
                 bottom: 20%;
+            }
+
+            .slide-content{
+                .product, .product2{
+                    bottom: 0;
+                }
+
+                .note{
+                    h4{
+                        font-size: 56px;
+                    }
+
+                    h5{
+                        font-size: 18px;
+                    }
+                }
             }
         }
 
@@ -851,6 +888,10 @@
                     a{
                         font-size: 140px;
                         position: absolute;
+
+                        &.small-text{
+                            font-size: 110px;
+                        }
                     }
                 }
             }
@@ -912,13 +953,80 @@
                 &.slick-center{
                     a{
                         font-size: 72px;
+
+                        &.small-text{
+                            font-size: 56px;
+                        }
                     }
                 }
             }
         }
 
         .button-wrap{
-            bottom: 11%;
+            bottom: 10%;
+
+            .arrow-button{
+                font-size: 14px;
+            }
+        }
+    }
+
+    @include media(max-width, 768px){
+        .sub-head{
+            bottom: 35%;
+            font-size: 18px;
+        }
+
+        .find-slider-nav{
+            .slide-item{
+                &.slick-active{
+                    text-align: left;
+                }
+
+                &.slick-active ~ .slick-active ~ .slick-active,
+                &.slick-active ~ .slick-active ~ .slick-active ~ .slide-item{
+                    text-align: right;
+                }
+
+                a{
+                    font-size: 18px;
+                }
+
+                &.slick-center{
+                    a{
+                        font-size: 52px;
+                    }
+                }
+            }
+        }
+    }
+
+    @include media(max-width, 512px){
+        .sub-head{
+            bottom: 40%;
+            font-size: 18px;
+        }
+
+        .button-wrap{
+            bottom: 14%;
+        }
+
+        .find-slider-nav{
+            .slide-item{
+                &.slick-active{
+                    a{
+                        margin-left: -50%;
+                    }
+                }
+
+                &.slick-active ~ .slick-active ~ .slick-active,
+                &.slick-active ~ .slick-active ~ .slick-active ~ .slide-item{
+                    a{
+                        margin-left: 0;
+                        margin-right: -50%;
+                    }
+                }
+            }
         }
     }
 }
@@ -1017,8 +1125,16 @@
         }
 
         .doc-quote{
+            &:before{
+                position: static;
+                width: 45px;
+                height: 45px;
+                margin: 0 auto 10px;
+            }
+
             h3{
                 font-size: 22px;
+                margin-bottom: 15px;
 
                 .highlight{
                     font-size: 25px;
@@ -1042,13 +1158,20 @@
 
 
 .sec-faq{
-    padding-top: 120px;
+    padding-top: 50px;
     padding-bottom: 0;
     padding-left: 0;
     padding-right: 0;
 
     .section-title{
         margin-bottom: 60px;
+    }
+
+    .button-circ-down{
+        position: relative;
+        z-index: 10;
+        margin-bottom: -30px;
+        transform: translateY(10px);
     }
 
     .grid-container{
@@ -1200,6 +1323,15 @@
     }
 
     @include media(max-width, 1023px){
+        .section-title{
+            margin-bottom: 35px;
+        }
+
+        .button-circ-down{
+            transform: none;
+            margin-bottom: -20px;
+        }
+
         .faq-boxes{
             display: block;
         }
