--- a/wp-content/themes/mybizniche/resources/css/scss/base/_components.scss
+++ b/wp-content/themes/mybizniche/resources/css/scss/base/_components.scss
@@ -246,3 +246,22 @@
     text-align: center;
     text-transform: uppercase;
 }
+
+
+.button-circ-down{
+    width: 60px;
+    height: 60px;
+    box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.25);
+    background: #ffffff url(../img/icn-arrow-down.png) no-repeat center;
+    border-radius: 50%;
+    display: inline-block;
+    border: 0;
+    overflow: hidden;
+    text-indent: 999px;
+
+
+    @include media(max-width, 1023px){
+        width: 35px;
+        height: 35px
+    }
+}
