--- a/wp-content/themes/mybizniche/style.css
+++ b/wp-content/themes/mybizniche/style.css
@@ -373,6 +373,16 @@ input[type="password"] {padding: 20px;}
 .find-store-btn.fixed {position: fixed;	font-size: 16px;	font-weight: 500;	text-align: center;	color: #222222;	text-transform: uppercase;	z-index: 20; right: 30px; bottom: 10px;	transition: color 0.3s ease;}
 .find-store-btn.fixed img {display: block; margin: 0 auto 10px;}
 
+#search-box {padding:10px 30px; background: #eee; position: absolute;left: 0; right: 0;	top: -50px;	transition: all 0.5s ease;}
+#search-box.show {top: 110px;	transition: all 0.5s ease;}
+#search-box.show ~ * .s-icon {background-image: url(resources/img/icn-close.svg); background-size: 25px;}
+#search-box form {position: relative;}
+#search-box form input {margin: 0; padding:15px 50px 15px 20px;}
+#search-box form input[type="image"] {position: absolute; right: 15px; top:15px; padding:0; z-index: 10;}
+
+.f-logo {text-align:center; margin: -10px 0 40px;}
+
+
 @media (min-width: 1600px) {
 	.wp-block-group__inner-container, .wp-block-cover__inner-container {max-width: 1440px;}
 
@@ -466,6 +476,8 @@ input[type="password"] {padding: 20px;}
 
 	.cart-header {padding:80px 0 50px}
 	.checkout-header {padding:80px 0 50px}
+
+	#search-box.show {top: 140px;}
 }
 
 @media (max-width: 639px) {
