--- a/wp-content/themes/mybizniche/style.css
+++ b/wp-content/themes/mybizniche/style.css
@@ -214,7 +214,6 @@ input[type="password"] {padding: 20px;}
 
 #woocommerce-single-product .related {padding: 70px 0 20px;}
 #woocommerce-single-product .related h2 {font-size: 32px; font-weight: bold;}
- 
 
 /* Product popup */
 #yith-quick-view-modal.open .yith-wcqv-main {overflow-y: auto;}
@@ -421,6 +420,37 @@ input[type="password"] {padding: 20px;}
 
 .btn-loading {text-align:center;}
 
+
+/* Barch Records */
+.batch-sidebar {margin-right:15px;}
+.batch-menu {height: 100%; margin:0 0 50px;}
+.batch-menu > ul {margin: 0; padding: 0;}
+.batch-menu > ul > li {list-style: none; padding:0 0 10px; margin: 0;}
+.batch-menu > ul > li > a {color: #222;padding: 18px 40px 18px 30px; margin-bottom: 10px; display: block; font:500 14px "Roboto", sans-serif; text-transform: uppercase; line-height: 1; position: relative;}
+.batch-menu > ul > li > a:after {content: ""; transition: all 0.5s ease; position: absolute; width: 10px; height: 10px; right: 20px; top: 20px; border-top: 2px solid; border-right: 2px solid; transform: rotate(45deg); opacity: .3;}
+.batch-menu > ul > li.is-active > a {background-color: #222; color:#fff;}
+.batch-menu > ul > li[aria-expanded="true"] > a {background: #222; color:#fff;}
+.batch-menu > ul > li[aria-expanded="true"] > a:after {transform: rotate(135deg);}
+.batch-menu > ul ul {margin:0; padding:0;}
+.batch-menu > ul ul li {list-style:none}
+.batch-menu > ul ul li a {font-size:14px; font-weight: 500; color:#888; padding:10px 30px;}
+.batch-menu > ul ul li a:hover {color:#14c8f0;}
+
+.batch-header {padding:150px 0 80px; text-align:center}
+.batch-group {margin-bottom: 50px;}
+.batch-head {font-size:32px; color:#b2b2ae;}
+.batch-item {margin-bottom: 50px; text-align:center; padding:15px 10px;}
+.item-active + .batch-item{background:#eee;}
+.batch-item h6 {font:bold 16px "Roboto Slab", serif; margin-bottom:30px;}
+.batch-item figure {height:260px; text-align:center; overflow:hidden; padding: 10px 0; background: #eee; margin:0 0 20px;}
+.batch-item figure img {height: 240px; max-width: none; width:auto;}
+.batch-item .lot-number {text-align: left; margin:0 0 10px;}
+.batch-item .lot-number a {color:#14c8f0;}
+
+.offset {margin:-80px 0 0; padding:80px 0 0;}
+.no-results {font-size:18px}
+
+
 /* Footer */
 .f-logo {text-align:center; margin: -10px 0 40px;}
 #footer .f-menu h4 {font-size: 14px;}
@@ -483,10 +513,14 @@ input[type="password"] {padding: 20px;}
 
 	.cart-header h1 {font-size:60px;}
 	.checkout-header h1 {font-size:60px;}
+
 	.woocommerce-checkout h3 {font-size: 30px;}
 	.woocommerce-checkout #order_review_heading + .button {display:none}
-
 	.woocommerce-products-header {padding:80px 0 50px}
+
+	.batch-header h1 {font-size: 60px;}
+	.batch-header p {font-size:20px;}
+	.batch-header p br {display:none;}
 
 }
 
@@ -547,6 +581,11 @@ input[type="password"] {padding: 20px;}
 	.blog-post-item .post-share ul {float: right;}
 	.blog-post-item .post-share ul li {display: inline-block; padding:0 20px;}
 	.blog-post-item .post-share svg {height: 15px;}
+	
+	.batch-header {padding:110px 0 50px;}
+	.batch-header h1 {font-size:40px}
+
+	.batch-sidebar {position: static !important;margin: 0 !important;}
 }
 
 @media (max-width: 639px) {
